# f25-SeatCheck

./: .gitignore  .pre-commit-config.yaml  README.md  backend_structure.txt  docker-compose.yml  frontend_structure.txt  package-lock.json  package.json  requirements.txt  tsconfig.json  witch Cody's-branch
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_CHECKINS.md  Dockerfile  alembic.ini  mypy.ini  project_structure.txt  pyproject.toml  pyrightconfig.json  test_checkin_api.py
backend/alembic/: env.py
backend/alembic/versions/: 50a654c32b1f_initial_schema_users_venues_checkins.py  65bc8518c436_create_core_tables.py  9a7c3b4d5e6f_add_venue_image_url.py  f7e6027583d9_add_ratings_table.py  f912acd05186_add_postgis_location_to_venues.py
backend/db/: schema.sql
backend/scripts/: generate_env.sh  seed_db.py  test_postgis.py
backend/src/app/: config.py  database.py  db.py  main.py  models.py  schemas.py
backend/src/app/api/: __init__.py  auth.py  deps.py
backend/src/app/api/v1/: __init__.py  checkins.py  health.py  ratings.py  venues.py
backend/src/app/auth/: auth_routes.py  cas.py
backend/src/app/crud/: __init__.py  checkins.py  presence.py  ratings.py  venues.py
backend/src/app/schemas/: __init__.py  checkin.py  location.py  rating.py  venue.py
backend/src/app/services/: metrics.py
backend/tests/: README.md  conftest.py  test_auth.py  test_auth_dev.py  test_cas_auth.py  test_checkin.py  test_checkins.py  test_example.py  test_health.py  test_postgis.py  test_ratings.py  test_schema.py  test_venues.py
frontend/: package.json
seat-check/: .env  .env.example  .gitignore  Dockerfile  app.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
seatcheck-mobile/: Main.tsx  app.json  index.js  package.json  (+1 more)
(+28 files in other folders)
