[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.1",
    "pydantic>=2.12.3",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.1",
    "httpx>=0.27",
    "itsdangerous>=2.1",
    "geoalchemy2>=0.15",
]

[build-system]
requires = ["setuptools"]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
 "pre-commit>=4.3.0",
 "pytest>=8.4.2",
 "pytest-cov>=7.0.0",
 "ruff>=0.14.1",
]

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
explicit_package_bases = true
